.k8s/simple-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
spec:
  selector:
    app: simple-app-service
  type: NodePort
  ports:
  - protocol: TCP
    name: http
    port: 3001
    targetPort: 3001
    nodePort: 31111
